feat: like publication
