# src/swagger.json
@@ -461,6 +461,33 @@
         "tags": ["Comment"]
       }
     },
+    "/likes": {
+      "post": {
+        "description": "Likes a publication if not already liked",
+        "parameters": [
+          {
+            "in": "route",
+            "name": "id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security": [{ "bearerAuth": [] }],
+        "summary": "Like a publication",
+        "tags": ["Like"]
+      }
+    },
     "/search": {
       "get": {
         "description": "Get profiles list that matches with the search",
